--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.13.0",
     "react-three-mind": "^0.2.1",
     "three": "^0.158.0"
+  },
+  "devDependencies": {
+    "sass": "^1.69.5"
   }
 }
