--- a/src/data/.htaccess
+++ b/src/data/.htaccess
@@ -1,3 +1,7 @@
-<IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin "*"
-</IfModule>
+<IfModule mod_setenvif.c>
+    <IfModule mod_headers.c>
+        Header Set Access-Control-Allow-Origin "https://mind-three.vercel.app"
+        Header Set Access-Control-Allow-Origin "https://megacities.world"
+    </IfModule>
+  </IfModule>
+  
